Java 19 migration